# nmag

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: cd.yml  ci.yml
src/: config.rs  error.rs  main.rs  types.rs
src/render/: mod.rs  shader.rs  shader.wgsl
src/state/: magnifier.rs  mod.rs  mouse.rs
