[package]
name = "nmag"
version = "0.1.0"
edition = "2024"
description = "Full-screen zoom for Wayland compositors"
default-run = "nmag"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }

wayland-client = "0.31.11"
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }
wayland-protocols = { version = "0.32.9", features = [
    "client",
    "staging",
    "unstable",
] }
wayland-backend = { version = "0.3.11", features = ["client_system"] }

wgpu = "27.0.1"
raw-window-handle = "0.6.2"
env_logger = "0.11.8"
log = "0.4.28"
pollster = "0.4.0"

bytemuck = "1.24.0"
memmap2 = "0.9.5"
nix = { version = "0.29", features = ["fs", "mman"] }
